--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
 	background: #F6F6F6;
 	border: 1px solid black;
 	position: relative;
+	margin: 0 70px;
 }
 
 h1{
 	text-align: center;
 	box-shadow: 0, 2px, 10px, 5px, red;
+	font-size: 40px;
 }
 img{
 	display:block;
@@ -28,3 +30,22 @@ img{
 	display:none;
 }
 
+h1{
+	padding-top: 10px;
+	box-shadow: #779494 -5px 1px 13px 9px;
+	color: #75fb27;
+	font-family: 'Orbitron', sans-serif;
+
+}
+
+body{
+	background:black;
+}
+
+button{
+	margin: 50px auto;
+    display: block;
+    border-radius: 100px;
+    height: 140px;
+    box-shadow: #0bd8d8 0px 1px 20px 0px;
+}
